# cpp-framework-bundle

./: .gitignore  CMakeLists.txt  README.md
SampleApp/: .gitignore  Podfile
SampleApp/SampleApp/: AppDelegate.swift  LaunchScreen.storyboard  ObjSampleLib.h  ObjSampleLib.mm  SampleApp-Bridging-Header.h  ViewController.swift
SampleApp/SampleApp.xcodeproj/: project.pbxproj
cmake/: Boost.cmake  OpenCV.cmake
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  SampleLib.h  SampleLib.mm  sample.cpp  sample.h
src/lib/SampleLib.app/Contents/: Info.plist
