cmake_minimum_required(VERSION 3.8.2 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 14)

set(PACKAGE_NAME "cpp-framework-bundle")
set(PACKAGE_VERSION "1.0.0")

set(FRAMEWORK_NAME "SampleLib")
set(FRAMEWORK_BUNDLE_IDENTIFIER "jp.tokuda109.cpp-framework-bundle")

set(CODE_SIGN_IDENTITY "iPhone Developer")
set(IPHONEOS_DEPLOYMENT_TARGET 8.0)

set(PROJECT_BUILD_DIRNAME build)
set(PROJECT_CMAKE_DIRNAME cmake)
set(PROJECT_BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_BUILD_DIRNAME})
set(PROJECT_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_CMAKE_DIRNAME})

set(CMAKE_BINARY_DIR ${PROJECT_BUILD_DIR})
set(CMAKE_MODULE_PATH ${PROJECT_CMAKE_DIR})

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BUILD_DIR})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc")

project(${PACKAGE_NAME})

add_subdirectory(src/cli)
add_subdirectory(src/lib)
